chore: changed title of homepage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Count</title>
+    <title>My Portfolio</title>
     <script src="scripts/counter.js"></script>
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
